# google_places_enricher_2.0

./: .gitignore  LICENSE.txt  README.md  TODO.md  pyinstaller_inclusion_checklist.md  pyproject.toml  requirements.txt  run_app.py
.clinerules/workflows/: pyinstaller-workflow.md
data/input/: categories_request_smaller.csv
data/output/: lat_lon_calculated.csv
docs/llm/: app.md
google_places_enricher_2_0/: app.py  conftest.py  flows.py  main.py  utils.py
google_places_enricher_2_0/static/: coordinates_definition.css  tables.css
google_places_enricher_2_0/templates/: categories.html  coordinates_definition.html  coordinates_result.html  enrich_data.html  main_page.html  match_categories.html  view_data.html
google_places_enricher_2_0/tests/: test_app.py
google_places_enricher_2_0/uploads/: categories_request.csv
notebooks/: create-yelp-phrase.ipynb  match-categories.ipynb
notebooks/data/: finalMatchYelp.csv
pyinstaller/: Google Places Enricher 2.0.spec  pyinstaller.ps1
scripts/: export_requirements.ps1
scripts/pyinstaller/: pyinstaller-auto.ps1  pyinstaller-transformers-dependencies.md  pyinstaller-workflow.md  pyinstaller.ps1  transformers-pyinstaller-workflow.md
src/: TODO.md  app.py  config.py  flows.py  main.py  utils.py
src/static/: categories.css  components_result.css  coordinates_definition.css  coordinates_result.css  lat_lon_calculated.csv  main_page.css  tables.css  view_data.css
src/templates/: categories.html  components_result.html  coordinates_definition.html  coordinates_result.html  enrich_data.html  main_page.html  (+3 more)
(+20 files in other folders)
