[tool.poetry]
name = "google-places-enricher-2-0"
version = "0.1.0"
description = ""
authors = ["louis-br <46930119+louis-br@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
# poetry run pip install pywebview[qt]
requests = "^2.32.3"
utils = "^1.0.2"
shapely = "^2.0.6"
pyproj = "^3.7.0"
pandas = "^2.2.3"
sentence-transformers = "^3.4.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
